fixed issue setting overflow x to hidden to html messed up position stickcy

--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -177,6 +177,6 @@ html{
     margin-bottom: 60px;
 }
 
-html, body{
+body{
     overflow-x: hidden;
 }
