--- a/styles/main.css
+++ b/styles/main.css
@@ -89,7 +89,7 @@ html {
   margin-bottom: 60px;
 }
 
-html, body {
+body {
   overflow-x: hidden;
 }
 
